# terp

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
.zed/: settings.json
assets/shaders/: hsl.wgsl  hsv.wgsl  points.wgsl
src/: animate.rs  animation.rs  app.rs  camera.rs  cli.rs  curve2d.rs  draw.rs  lib.rs  line2d.rs  linestrip2d.rs  main.rs  points.rs  project.rs  render.rs  setup.rs  ui.rs  util.rs  webgpu.rs
src/points/: material.rs  mesh.rs
src/points/shaders/: points.wgsl
src/shaders/: points.wgsl
src/ui/: brush_color.rs  brush_size.rs
src/ui/shaders/: hsv.wgsl
web/: editor.html  index.html  player.html  terp.js
web/demo/: smile.terp  sunrise.terp  x.terp
webgpu/: Cargo.toml  index.html
webgpu/src/: lib.rs
