[package]
name = "terp"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.95"
bevy = { version = "0.15.1", features = ["webgpu"] }
clap = { version = "4.5.27", features = ["cargo"] }
flexbuffers = "25.1.21"
serde = "1.0.217"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
