[package]
name = "terp"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bevy = { version = "0.15.1", features = ["webgpu"] }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["cargo"] }
flexbuffers = "25.1.21"
serde = "1.0.217"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.77"
